--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,3 @@
-html {
-	background-image: url(../images/bg4.jpg);
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-body { 
-	background-color: transparent;
-	overflow-y: scroll;
-}
 .dress {
 	overflow: hidden;
 	display: flex;
@@ -33,4 +24,89 @@ body {
 .cartImage {
 	width: 150px;
 	height: 150px;
+}
+
+/* You can add global styles to this file, and also import other style files */
+body {
+  padding-top: 50px;
+}
+.dropdown.dropdown-lg .dropdown-menu {
+  margin-top: -1px;
+  padding: 6px 20px;
+}
+.input-group-btn .btn-group {
+  display: flex !important;
+}
+.btn-group .btn {
+  border-radius: 0;
+  margin-left: -1px;
+}
+.btn-group .btn:last-child {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.btn-group .form-horizontal .btn[type="submit"] {
+border-top-left-radius: 4px;
+border-bottom-left-radius: 4px;
+}
+.form-horizontal .form-group {
+  margin-left: 0;
+  margin-right: 0;
+}
+.form-group .form-control:last-child {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  #adv-search {
+      width: 500px;
+      margin: 0 auto;
+  }
+  .dropdown.dropdown-lg {
+      position: static !important;
+  }
+  .dropdown.dropdown-lg .dropdown-menu {
+      min-width: 500px;
+  }
+}
+
+.list:nth-child(odd){
+  background-color: #b9e1e2;
+  color: #fff;
+}
+
+.list:nth-child(even){
+  background-color: #98c9d2;
+  color: #fff;
+}
+
+.list {
+  padding: 5px;
+}
+
+.list:first-child {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.list:last-child {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+
+#search-form {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#search-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
