--- a/templates/my-form.html
+++ b/templates/my-form.html
@@ -1,19 +1,20 @@
-<div ng-hide="logged">
-	<form class="form-horizontal">
-		<div class="form-group">
-			<label class="control-label col-sm-6">Email: </label>
-			<input type="email" class="col-sm-2" ng-model="email"/>
-		</div>
-		<div class="form-group">
-			<label class="control-label col-sm-6">Password: </label>
-			<input  type="password" class="col-sm-2" ng-model="password"/>
-		</div>
-		<span class="btn btn-responsive">
-			<a href="#/dashboard" ng-click="login()" class="btn btn-primary" style="margin-right:10px;">Login</a>
-			<a href="#/register" class="btn btn-primary" ng-click="register()">Register</a>
-		</span>
-	</form>
-	<!--span ng-show="login.email.$invalid">Enter valid email Id</span>
-	<span ng-show="login.password.$invalid">Password is required.</span-->
-	<span class="text-danger">{{loginMessage}}</span>
-</div>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8" id="search-div">
+      <form class="form-horizontal" role="form" id="search-form">
+        <div class="form-group">
+          <label for="contain">Source</label>
+          <input class="form-control" type="text" name="source" ng-model="source"/>
+        </div>
+        <div class="form-group">
+          <label for="contain">Destination</label>
+          <input class="form-control" type="text" name="destination" ng-model="destination"/>
+        </div>
+        <div class="form-group">
+          <label for="contain">Id</label>
+          <input class="form-control" type="text" name="id" ng-model="id" />
+        </div>
+        <a href="#/results" class="btn btn-primary" ng-click="search()">Search</a>
+      </form>
+    </div>
+  </div>
